# algorithmscpp

./: .gitignore  .travis.yml  CMakeLists.txt
src/: list.h  list.hpp
test/: CMakeLists.txt  linkedlist_test.hpp  listdouble_test.hpp  liststring_test.hpp  main.cpp
